# ML-model

./: .replit  README.md  app.py  iris.csv  model.py  pyproject.toml  requirements.txt  trained_model.pkl
templates/: home.html  prediction.html
