[tool.poetry]
name = "repl-nix-ml-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ml_model"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
joblib = "^1.4.2"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
